--- a/server/fly.toml
+++ b/server/fly.toml
@@ -1,35 +1,44 @@
-# fly.toml - Fly.io configuration
-app = "medieval-lego-wars"
-primary_region = "fra"
+# fly.toml app configuration file generated for block-wars-broken-river-3693 on 2025-12-14T00:46:42+03:00
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
+app = 'block-wars-broken-river-3693'
+primary_region = 'fra'
 
 [build]
-  builder = "heroku/buildpacks:20"
+  builder = 'heroku/buildpacks:20'
 
 [env]
-  PORT = "3001"
-  NODE_ENV = "production"
+  NODE_ENV = 'production'
+  PORT = '3001'
 
 [http_service]
   internal_port = 3001
   force_https = true
-  auto_stop_machines = false
+  auto_stop_machines = 'off'
   auto_start_machines = true
   min_machines_running = 1
 
 [[services]]
+  protocol = 'tcp'
   internal_port = 3001
-  protocol = "tcp"
 
   [[services.ports]]
-    handlers = ["http"]
     port = 80
+    handlers = ['http']
 
   [[services.ports]]
-    handlers = ["tls", "http"]
     port = 443
+    handlers = ['tls', 'http']
 
   [[services.http_checks]]
-    interval = "30s"
-    timeout = "5s"
-    path = "/"
-    method = "GET"
+    interval = '30s'
+    timeout = '5s'
+    method = 'GET'
+    path = '/'
+
+[[vm]]
+  memory = '1gb'
+  cpus = 1
+  memory_mb = 1024
