Rebrand: Medieval Lego Wars  Age of Blocks

--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "medieval-lego-wars-server",
   "version": "1.0.0",
-  "description": "WebSocket game server for Medieval Lego Wars",
+  "description": "WebSocket game server for Age of Blocks",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
